# Dashboard

./: README.md
Firmware/LY11CAN_sim/: LY11CAN_sim.ioc
Firmware/STM32F429ZGT6/: .mxproject  STM32F429ZGT6.ioc
Firmware/STM32F429ZGT6/Middlewares/LVGL/GUI_APP/squareline/: CMakeLists.txt  ui.c  ui.h  ui_events.h
Firmware/STM32F429ZGT6/Middlewares/LVGL/GUI_APP/squareline/fonts/: ui_font_Anton_75_bpp4.c  ui_font_Jersey40.c  ui_font_PoetsenOne40.c  ui_font_fasterone20.c
Firmware/STM32F429ZGT6/Middlewares/LVGL/GUI_APP/squareline/images/: ui_img_battery_allert_png.c  ui_img_battery_png.c  ui_img_group_4_png.c  ui_img_group_5_png.c  ui_img_guage_bg_png.c  ui_img_internet_network_png.c  ui_img_iot_png.c  ui_img_line1_png.c  ui_img_line4_png.c  ui_img_ly_icon_png.c
Firmware/STM32F429ZGT6/Middlewares/LVGL/GUI_APP/squareline/screens/: ui_Screen1.c  ui_Screen2.c  ui_main_sreen.c  ui_startup.c
Firmware/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
Hardware/: 引脚定义.xls
Hardware/pcba/: ProProject_P1_2024-06-12.epro
Hardware/仪表/: aa.CATProduct  dashboard_shell_B.CATPart  dashboard_shell_B.stl  display_shell_B.CATPart  display_shell_B.stl  geban.CATPart  geban.stl  jiashimianban.CATPart  zz.CATProduct
Software/: LYdata202407222020.xlsx  使用教程.txt
Software/F1_style/: SquareLine_Project.sll  SquareLine_Project.spj
Software/LY10wirelessDashboard/: Message.qml  hello.cpp  main.cpp  main.qml  (+2 more)
modul/: JiaShiMianBan24.stl  dash.CATProduct  dashboard_shell.CATPart  dashboard_shell.stl  display_shell.CATPart  display_shell.stl
(+910 files in other folders)
